Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102319

Android BT service discovery agent crash when stopped

    XMLWordPrintable

Details

    • Android
    • 246ed1d928 (qt/qtconnectivity/dev) e0852fed60 (qt/qtconnectivity/6.3) e0852fed60 (qt/tqtc-qtconnectivity/6.3) 246ed1d928 (qt/tqtc-qtconnectivity/dev) 48070b83d5 (qt/tqtc-qtconnectivity/5.15) 48070b83d5 (qt/tqtc-qtconnectivity/5.15.10)

    Description

      In some cases the service discovery agent crashes if the application calls stop() as soon as it has discovered a service of interest.

      This seems to happen because the stop() releases the broadcast receiver object, but the code that sent the "serviceDiscovered" signal still uses the receiver after the signal emission (which by then is released by the apps signal handler/stop() call).

      Attachments

        For Gerrit Dashboard: QTBUG-102319
        # Subject Branch Project Status CR V

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews